Fix small link text on mobile
Link text for Topic and Collection links was 14px on mobile. We shouldn't really be using 14px font-size on mobile, especially not for important links.

Other content surrounding that was also using 16px, so we should match that.

--- a/app/assets/stylesheets/helpers/_taxonomy-navigation.scss
+++ b/app/assets/stylesheets/helpers/_taxonomy-navigation.scss
@@ -27,9 +27,9 @@
 }
 
 .taxonomy-navigation__column {
-  @include core-16;
   @include box-sizing(border-box);
   width: 100%;
+  font-size: 16px;
   padding: ($gutter / 6) $gutter-one-third ($gutter-half + $gutter-one-third) 0;
 
   @include media(tablet) {
